--- a/samples/hellosceneform/app/src/main/AndroidManifest.xml
+++ b/samples/hellosceneform/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
     package="com.google.ar.sceneform.samples.hellosceneform">
     <!-- Always needed for AR. -->
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- This tag indicates that this application requires ARCore. This results in the application
         only being visible in the Google Play Store on devices that support ARCore. -->
